tests/lean/local_notation_bug.lean.expected.out
f a b : A
f a b : A
nat ↣ bool : foo
bla : num
local_notation_bug.lean:22:8: error: invalid expression
num ↣ nat : of_num
